--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "get-input-selection": "^1.1.4",
+    "lodash": "^4.17.4",
     "textarea-caret": "^3.0.2"
   },
   "peerDependencies": {
